index Backend, estilizado con una guía y bienvenida

--- a/relevador/index.html
+++ b/relevador/index.html
@@ -171,6 +171,8 @@ var_dump($array);
 				 	<?php
 						$arrayProductos = Yii::api()->web->v1->products();
 						echo "<h2>" . $arrayProductos . "</h2>";
+						$array = array("Leche Conaprole", "Coca Cola", "Pasta de dientes Colgate", "Jugo de naranja Ades");
+var_dump($array);
 							
 					?>
 				  <!-- Default panel contents
