correciones en graficas de frontend y algunos ajustes de estilo

--- a/relevador/index.html
+++ b/relevador/index.html
@@ -145,8 +145,8 @@
 			<div class="row title-row">
 				<div class="col-12 ">Mis Rutas</div>
 			</div><!-- /row -->
-			<div class="row line-row">
-				<div class="hr">&nbsp;</div>
+			<!--<div class="row line-row">-->
+			<!--	<div class="hr">&nbsp;</div>-->
 			</div><!-- /row -->
 			<div align="center">
 				<div class="client-map">
